<?xml version="1.0"?>
<package>
  <name>robot_hmi</name>
  <version>0.1.0</version>
  <description>

     robot_hmi

  </description>
  <maintainer email="csy@gmail.com">csy</maintainer>
  <author>csy</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rviz</build_depend>
  <run_depend>rviz</run_depend>
  <build_depend>serial</build_depend>
  <run_depend>serial</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>std_msgs sensor_msgs cv_bridge image_transport</build_depend>
  <run_depend>std_msgs sensor_msgs cv_bridge image_transport</run_depend>

 
</package>
